hphp/test/slow/typedef/typedef_option4.php.expectf
int(12)
NULL

Catchable fatal error: Argument 1 passed to yeah() must be an instance of two, string given in %s on line 8
